# fusion-bench-llm

./: .env.template  .gitignore  README.md  fusion-bench-llm.code-workspace.template  mkdocs.yml  pyproject.toml
config/: fabric_model_fusion.yaml  main.yaml
config/hydra/: default.yaml
config/method/: simple_average.yaml
config/modelpool/: Qwen2.5-1.5B_math_and_coder.yaml  Qwen2.5-1.5B_three_models.yaml  Qwen2.5-7B_math_and_coder.yaml
fusion_bench_llm/: __init__.py
fusion_bench_llm/constants/: __init__.py  banner.py
fusion_bench_llm/scripts/: cli.py  copy_tokenizer.py
scripts/benchmarks/: .gitignore  README.md  evaluate_Qwen1.5-7B-Chat.sh  evaluate_mistral-7B.sh  fusionbench-llm_Qwen2.5-1.5B.sh  fusionbench-llm_Qwen2.5-1B.sh  fusionbench-llm_Qwen2.5-7B.sh  fusionbench-llm_collect_results.py  laofeihong_Llama3.1-8B.sh  mergebench_Llama-3.2-3B-Instruct.sh  mergebench_collect_results.py  requirements.txt
scripts/benchmarks/collected_results/fusionbench-llm/: Llama-3.1-8B.csv  Qwen2.5-1.5B.csv  Qwen2.5-7B.csv
scripts/benchmarks/collected_results/mergebench/: Llama-3.1-8B-Instruct.csv  Llama-3.1-8B.csv  Llama-3.2-3B-Instruct.csv  Llama-3.2-3B.csv  gemma-2-2b-it.csv  gemma-2-2b.csv  gemma-2-9b-it.csv  gemma-2-9b.csv
scripts/benchmarks/results/arc_de/MergeBench__Llama-3.1-8B-Instruct_coding/: results_2025-07-09T11-46-09.737015.json
scripts/benchmarks/results/arc_de/MergeBench__Llama-3.1-8B-Instruct_instruction/: results_2025-07-09T00-03-10.821408.json
scripts/merge/: evaluate.sh  simple_average.sh
(+1168 files in other folders)
